# poser

./: CMakeLists.txt
models/: model.blend  silly_dancing.fbx
src/: CMakeLists.txt  Main.cpp
